# agent-trace-lint

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: broken-trace.json
src/agent_trace_lint/: __init__.py  cli.py  engine.py  errors.py  io.py  models.py  reporters.py  rules.py
tests/: test_cli.py  test_io.py  test_rules.py
