[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-trace-lint"
version = "0.1.0"
description = "Offline linting for AI agent tool-call traces."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mert Efe Kurt" }]
keywords = ["ai-agents", "llm", "evaluation", "observability", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.scripts]
agent-trace-lint = "agent_trace_lint.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.3",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_trace_lint"]

[tool.pytest.ini_options]
addopts = "--cov=agent_trace_lint --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
